--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,6 +6,10 @@
     font-family: 'Quicksand', sans-serif;
 }
 
+a{
+    text-decoration: none;
+}
+
 .minavbar{
     background-color: #FF9A8B;
     background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
@@ -201,9 +205,239 @@
 .mifooter{
     background-color: #FF9A8B;
     background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+    padding: 20px;
     text-align: center;
     color: #fff;
     font-size: 14px;
     font-weight: 300;
     font-family: 'Quicksand', sans-serif;
+}
+
+.loguito{
+  font-family: 'Pacifico', cursive;
+  font-size: 30px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.textt{
+  font-family: 'Pacifico', cursive;
+  font-size: 60px;
+  color: #323232;
+  text-decoration: none;
+  text-align: center;
+  margin-top: 50px;
+}
+.login-box{
+    padding:40px;
+    margin: 50px;
+}
+
+.formu{
+    width: 100%;
+    padding: 10px;
+    font-size: 20px;
+    font-family: 'Quicksand', sans-serif;
+    border-radius: 3px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 60px;
+}
+
+.formu input{
+    width: 100%;
+    padding: 10px;
+    font-size: 20px;
+    font-family: 'Quicksand', sans-serif;
+    border: 1px solid #f6d3ff;
+    border-radius: 30px;
+    margin-bottom: 10px;
+    background-color: #fff;
+}
+
+.formu input:focus{
+    outline: none;
+    border: 1px solid #f6d3ff;
+    box-shadow: 0px 0px 5px 0px #f6d3ff;
+
+}
+
+.formu input::placeholder{
+    color: #ccc;
+}
+
+
+.buttonlogin{
+    width: 100%;
+    padding: 10px;
+    font-size: 11px;
+    font-family: 'Quicksand', sans-serif;
+    border: 1px solid #ccc;
+    border-radius: 40px;
+    margin-bottom: 10px;
+    background-color: #FF9A8B;
+    background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+    color: #fff;
+    font-weight: 300;
+    margin: 10px 0px;
+}
+
+.buttonlogin:hover{
+    background-color: #FF9A8B;
+    color: #fff;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+
+
+.Btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition-duration: .3s;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  background-color: #FF9A8B;
+    background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+}
+
+/* plus sign */
+.sign {
+  width: 100%;
+  transition-duration: .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign svg {
+  width: 17px;
+}
+
+.sign svg path {
+  fill: white;
+}
+/* text */
+.text {
+  position: absolute;
+  right: 0%;
+  width: 0%;
+  opacity: 0;
+  color: white;
+  font-size: 1.2em;
+  font-weight: 600;
+  transition-duration: .3s;
+}
+/* hover effect on button width */
+.Btn:hover {
+  width: 125px;
+  border-radius: 40px;
+  transition-duration: .3s;
+}
+
+.Btn:hover .sign {
+  width: 30%;
+  transition-duration: .3s;
+  padding-left: 20px;
+}
+/* hover effect button's text */
+.Btn:hover .text {
+  opacity: 1;
+  width: 70%;
+  transition-duration: .3s;
+  padding-right: 10px;
+}
+/* button click effect*/
+.Btn:active {
+  transform: translate(2px ,2px);
+}
+
+.cssbuttons-io-button {
+  display: flex;
+  align-items: center;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 0.7em 1.4em 0.7em 1.1em;
+  color: white;
+  background: #ad5389;
+  background: linear-gradient(0deg, rgb(167, 20, 54) 0%, rgb(247, 102, 170) 100%);
+  border: none;
+  box-shadow: 0 0.7em 1.5em -0.5em #a7143e98;
+  letter-spacing: 0.05em;
+  border-radius: 20em;
+  margin-right: 15px;
+}
+
+.cssbuttons-io-button a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.cssbuttons-io-button svg {
+  margin-right: 6px;
+}
+
+.cssbuttons-io-button:hover {
+  box-shadow: 0 0.5em 1.5em -0.5em #a7145e98;
+}
+
+.cssbuttons-io-button:active {
+  box-shadow: 0 0.3em 1em -0.5em #a7144098;
+}
+
+
+.edit-button{
+  display: flex;
+  align-items: center;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 0.7em 1.4em 0.7em 1.1em;
+  color: white;
+  background-color: #FF9A8B;
+    background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+  border: none;
+  letter-spacing: 0.05em;
+  border-radius: 20em;
+  margin-right: 15px;
+}
+
+.edit-button:hover{
+  background-color: #FF9A8B;
+  cursor: pointer;
+}
+
+.delete-button{
+  display: flex;
+  align-items: center;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 0.7em 1.4em 0.7em 1.1em;
+  color: white;
+  background-color: #FF9A8B;
+    background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+  border: none;
+  letter-spacing: 0.05em;
+  border-radius: 20em;
+  margin-right: 15px;
+}
+
+.buttonoptions{
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin-top: 20px;
 }
